# boids

./: Cargo.toml  README.md
src/: boid.rs  boid_view.rs  boids.rs  main.rs
