# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "boids"
version = "0.1.0"
edition = "2021"

[lib]
name = "Boids"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking", "wayland"] }
bevy_prototype_lyon = "0.9.0"
rand = "0.8.5"
